Color sublist: updated icon to prefix

--- a/_includes/blocks/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/ms-tags-colors-color-sublist.html
@@ -2,9 +2,19 @@
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #dcdcdc;" data-color="#dcdcdc">ग़</i>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #dcdcdc;" data-color="#dcdcdc">ग़</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -14,9 +24,19 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #00bfff;" data-color="#00bfff">ग़</i>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -26,9 +46,19 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -38,9 +68,19 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -50,9 +90,19 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #b8860b;" data-color="#b8860b">ग़</i>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #b8860b;" data-color="#b8860b">ग़</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -62,9 +112,19 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -74,9 +134,19 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #343434;" data-color="#343434">ग़</i>
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #343434;" data-color="#343434">ग़</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
