Tag popup: updated color blocks

--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -4,20 +4,20 @@
     <div class="itemBoxTable">
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow">
-            <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                <div class="itemBoxTable__bodyCellInner">
+          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+            <div class="itemBoxTable__bodyCellInner">
 
-                  <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through tags">
+              <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through tags">
 
-                </div>
-            </li>
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action" style="flex-grow: 0;" data-flex="0">
-                <div class="itemBoxTable__bodyCellInner">
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action" style="flex-grow: 0;" data-flex="0">
+            <div class="itemBoxTable__bodyCellInner">
 
-                  <i class="itemBoxTable__action">ञ</i>
+              <i class="itemBoxTable__action">ञ</i>
 
-                </div>
-            </li>
+            </div>
+          </li>
         </ul>
         {% include blocks/ms-tags-colors-suggestions.html %}
       </div>
@@ -49,9 +49,19 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -72,9 +82,19 @@
               </ul>
               {% include blocks/ms-tags-colors-color-sublist.html %}
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -95,9 +115,19 @@
               </ul>
               {% include blocks/ms-tags-colors-color-sublist.html %}
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -149,9 +179,19 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -168,11 +208,21 @@
               {% include blocks/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #00bfff;" data-color="#00bfff">ग़</i>
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </li>
+                  </div>
+                </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     297
@@ -187,11 +237,21 @@
               {% include blocks/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </li>
+                  </div>
+                </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     dev-team
@@ -206,11 +266,21 @@
               {% include blocks/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </li>
+                  </div>
+                </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     back-end
