--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -6,10 +6,10 @@
   <h2 class="item-header__title">PMX - Fix horizontal scroll alterneting in FireFox <span class="item-header__id">391441</span></h2>
 
   <div class="item-header__actions">
-    <div class="pmx-selector pmx-selector--collapsed">
+    <div class="pmx-selector">
       <div class="pmx-selector__item pmx-selector__item--selected">
-        <div class="pmx-selector__block ">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
+        <div class="pmx-selector__block">
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</div>
         </div>
       </div>
     </div>
@@ -17,12 +17,13 @@
     <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
       <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_toggle-progress">
         <div class="pmx-selector__block">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ण</span>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ण</div>
         </div>
       </div>
+      <div class="pmx-selector__itemSeperator"></div>
       <div class="pmx-selector__item JS_selectorItem JS_toggle-comments">
         <div class="pmx-selector__block">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">स</span>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">स</div>
         </div>
       </div>
     </div>
