--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -63,7 +63,7 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
+                      <div class="pmx-selector pmx-selector--expanded">
                         <div class="pmx-selector__item pmx-selector__item--selected">
                           <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
@@ -93,7 +93,7 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
+                      <div class="pmx-selector pmx-selector--expanded">
                         <div class="pmx-selector__item pmx-selector__item--selected">
                           <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
