newMultiselecT: adding new item  has a new colored item now

--- a/_includes/javascript/colorAction.html
+++ b/_includes/javascript/colorAction.html
@@ -1,5 +1,15 @@
-<li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+<li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: ${color};" data-color="${color}">ग़</i>
+    <div class="pmx-field">
+      <div class="pmx-field__inner">
+        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+          <div class="pmx-selector__item">
+            <div class="pmx-selector__block">
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: ${color};" data-color="${color}">ग़</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </li>
