--- a/_includes/javascript/selectedBlock.html
+++ b/_includes/javascript/selectedBlock.html
@@ -13,7 +13,7 @@
 <div class="itemBox itemBox--children  JS_multiSelector__box--selectionChildren">
   <div class="itemBoxTable">
     <div class="itemBoxBody itemBoxBody--sortable">
-
+      ${selectedFilters}
     </div>
   </div>
 </div><!-- /.itemBox selection-->
