Filter: sorting between two groups

--- a/_includes/javascript/selectedBlock-Include.html
+++ b/_includes/javascript/selectedBlock-Include.html
@@ -18,7 +18,7 @@
 
 <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenInclude">
   <div class="itemBoxTable">
-    <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
+    <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
     </div>
   </div>
 </div>
