--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -44,7 +44,7 @@
 
               <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenInclude">
                 <div class="itemBoxTable">
-                  <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
+                  <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
                         <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
@@ -102,7 +102,7 @@
 
               <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenExclude">
                 <div class="itemBoxTable">
-                  <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
+                  <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
                         <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
