--- a/_includes/javascript/selectedBlock-Exclude.html
+++ b/_includes/javascript/selectedBlock-Exclude.html
@@ -18,7 +18,7 @@
 
 <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenExclude">
   <div class="itemBoxTable">
-    <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
+    <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
     </div>
   </div>
 </div>
