Filter: making sure we don't have empty selected subgroups

--- a/_includes/javascript/selectedBlock-Exclude.html
+++ b/_includes/javascript/selectedBlock-Exclude.html
@@ -1,4 +1,4 @@
-<ul class="itemBoxTable__bodyRow ">
+<ul class="itemBoxTable__bodyRow  JS_multiSelector__box--selectionTitleExclude">
   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
     <div class="itemBoxTable__bodyCellInner">
       <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
