--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -24,7 +24,7 @@
         <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
           <div class="itemBoxTable">
             <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
-              <ul class="itemBoxTable__bodyRow ">
+              <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitleInclude">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
                     <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
@@ -82,7 +82,7 @@
                 </div>
               </div>
 
-              <ul class="itemBoxTable__bodyRow ">
+              <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitleExclude">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
                     <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
