Selected item tick is not add action

--- a/_includes/javascript/itemSelected.html
+++ b/_includes/javascript/itemSelected.html
@@ -1,5 +1,5 @@
-<li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_showSelected" style="flex-grow: 0;" data-flex="0">
+<li class="itemBoxTable__bodyCell JS_showSelected" style="flex-grow: 0;" data-flex="0">
   <div class="itemBoxTable__bodyCellInner">
-    <i class="itemBoxTable__action itemBoxTable__action--add">✓</i>
+    <i class="itemBoxTable__action ">✓</i>
   </div>
 </li>
