added andOr selector

--- a/_includes/javascript/selectedBlock.html
+++ b/_includes/javascript/selectedBlock.html
@@ -4,6 +4,7 @@
         <i>ऄ Selected</i>
       </div>
     </li>
+    ${andOrSelector}
     <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
       <div class="itemBoxTable__bodyCellInner">
         <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
