--- a/_includes/javascript/selectedBlock-Include.html
+++ b/_includes/javascript/selectedBlock-Include.html
@@ -9,6 +9,7 @@
       <i>Include</i>
     </div>
   </li>
+  {% include javascript/and-or-selector.html %}
   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
     <div class="itemBoxTable__bodyCellInner">
       <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
