--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -14,6 +14,7 @@
               <i>Selected</i>
             </div>
           </li>
+          {% include javascript/and-or-selector.html %}
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
             <div class="itemBoxTable__bodyCellInner">
               <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
@@ -35,6 +36,7 @@
                     <i>Include</i>
                   </div>
                 </li>
+                {% include javascript/and-or-selector.html %}
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
                     <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
@@ -93,6 +95,7 @@
                     <i>Exclude</i>
                   </div>
                 </li>
+                {% include javascript/and-or-selector.html %}
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
                     <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
