Added open/close functionality for filter-tags popup

--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup multiSelector--visible JS_multiSelector--withFilter" id="filter-tagpicker">
+<div class="multiSelector multiSelector--popup JS_multiSelector--withFilter" id="filter-tagpicker">
 
   <div class="itemBox JS_multiSelector__box">
     <div class="itemBoxTable">
